tests/negative/semantics/return_empty_in_typed.stream
// EXPECT: Error
function lie() -> Int {
    return; // Error: Return type mismatch
}